Address align: http://code.google.com/p/wp-e-commerce/issues/detail?id=255
git-svn-id: https://plugins.svn.wordpress.org/wp-e-commerce/branches/3.8-development@320768 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/wpsc-theme/wpsc-default.css
+++ b/wpsc-theme/wpsc-default.css
@@ -1169,6 +1169,7 @@ background-color: #f5f5f5;
 #content table.wpsc_checkout_table tr td {
 	border: none;
 	padding:0px;
+	vertical-align: top;
 }
 
 .wpsc-shopping-cart .asterix {
